// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectToggleRefinement routing getWidgetSearchParameters should remove the refinement (one value) 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [
    "isShippingFree",
  ],
  "disjunctiveFacetsRefinements": Object {},
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "",
  "numericRefinements": Object {},
  "tagRefinements": Array [],
}
`;

exports[`connectToggleRefinement routing getWidgetSearchParameters should update the SP base on the UI state (two values) 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [
    "isShippingFree",
  ],
  "disjunctiveFacetsRefinements": Object {
    "isShippingFree": Array [
      "paid-shipping",
    ],
  },
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "",
  "numericRefinements": Object {},
  "tagRefinements": Array [],
}
`;

exports[`connectToggleRefinement routing getWidgetSearchParameters should update the SP base on the UI state - toggled (two values) 1`] = `
SearchParameters {
  "disjunctiveFacets": Array [
    "isShippingFree",
  ],
  "disjunctiveFacetsRefinements": Object {
    "isShippingFree": Array [
      "free-shipping",
    ],
  },
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "hierarchicalFacets": Array [],
  "hierarchicalFacetsRefinements": Object {},
  "index": "",
  "numericRefinements": Object {},
  "tagRefinements": Array [],
}
`;

exports[`connectToggleRefinement routing getWidgetState should add an entry equal to the refinement 1`] = `
Object {
  "toggle": Object {
    "isShippingFree": true,
  },
}
`;
